# cheatsheet-generator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
src/cheatsheet_generator/: cli.py  generator.py  models.py
